--- a/RO/blanchard.html
+++ b/RO/blanchard.html
@@ -126,33 +126,33 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Tehnologii:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 HTML: Pentru marcarea structurii paginii web.
                                 CSS: Pentru stiluri și aspect exterior.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Aspect:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Aceasta este o pagină dedicată aspectelor macroeconomice sau teoriei lui Oliver Blanchard.
                                 economie.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Interactivitate:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Pagina are elemente cu care utilizatorul poate interacționa: butoane, formulare, animații etc.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Receptivitate:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Site-ul este receptiv și arată bine atât pe dispozitivele de calculator, cât și pe cele mobile.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Sursă deschisă:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Proiectul este găzduit pe GitHub Pages, ceea ce poate însemna că este cod sursă deschis și
                                 puteți studia
                                 codul pe GitHub.
