--- a/RO/contacts.html
+++ b/RO/contacts.html
@@ -67,7 +67,7 @@
             <div class="container">
                 <div class="contacts__block">
                     <div class="contacts__block-content">
-                        <h2 class="contacts__title" data-lang-key="contactsTitle" id="contactsTitle">Contactați-mă</h2>
+                        <h2 class="contacts__title contacts__title-ro" data-lang-key="contactsTitle" id="contactsTitle">Contactați-mă</h2>
                         <p class="contacts__subtitle" data-lang-key="contactsSubtitle">
                             Dacă sunteți interesat de munca mea sau doriți să lăsați un feedback despre acest site, sunt deschis
                             la
