--- a/RO/evklid.html
+++ b/RO/evklid.html
@@ -126,7 +126,7 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Sursă deschisă:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Proiectul este găzduit pe GitHub Pages, ceea ce poate însemna că este sursă deschisă și puteți
                                 să-l
                                 studiați
