--- a/RO/portfolio.html
+++ b/RO/portfolio.html
@@ -121,7 +121,7 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Design receptiv:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Site-ul este dezvoltat pentru a fi receptiv, asigurând o funcționare fără probleme pe diferite
                                 dispozitive și
                                 dimensiuni de ecran.
@@ -129,7 +129,7 @@
                         </li>
                         <li class="projects__preview-item">
                             UI/UX modern:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Site-ul are un interfață modernă și curată, asigurând o experiență plăcută.
                                 Utilizează o schemă de culori și o tipografie uniformă pe întregul site.
                             </p>
