--- a/RO/recidiviz.html
+++ b/RO/recidiviz.html
@@ -130,27 +130,27 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Tehnologii:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 HTML, CSS și JavaScript au fost utilizate pentru crearea unei pagini web interactive cu
                                 vizualizare a datelor.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Aspect:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Aplicarea unui design și interfețe moderne pentru o interacțiune mai bună cu datele.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Interactivitate:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Pagina conține elemente cu care utilizatorul poate interacționa, cum ar fi butoane pentru
                                 selectarea datelor și altele.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Sursă deschisă:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Proiectul este disponibil public și codul său sursă poate fi studiat pe platforma GitHub.
                             </p>
                         </li>
