--- a/RO/rivo.html
+++ b/RO/rivo.html
@@ -131,7 +131,7 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Design receptiv:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Site-ul web este dezvoltat ca fiind receptiv, ceea ce asigură funcționarea fără probleme pe
                                 diferite dispozitive și dimensiuni de
                                 ecran.
@@ -139,7 +139,7 @@
                         </li>
                         <li class="projects__preview-item">
                             UI/UX modern:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Site-ul are o interfață modernă și curată pentru utilizatori, oferind o experiență plăcută.
                                 Folosește o schemă de culori și o tipografie uniformă pe întregul site.
                             </p>
