--- a/RO/robin.html
+++ b/RO/robin.html
@@ -130,35 +130,35 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Structura paginii:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Pagina are o structură bloc cu separare în diferite secțiuni pentru o mai bună organizare a
                                 conținutului.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Tipografie:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Pentru o citire ușoară sunt utilizate fonturi confortabile cu dimensiuni și intervale bine
                                 alese.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Utilizarea CSS:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Stilurile sunt realizate cu utilizarea CSS, permițând crearea unui design modern și atrăgător al
                                 paginilor.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Elemente interactive:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Pe pagina există elemente interactive, cum ar fi butoanele și elementele de control pentru
                                 confortul utilizatorului.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Compatibilitatea cross-browser:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Structura proiectului este compatibilă cu mai multe browsere web pentru a asigura afișarea
                                 corectă în diferite browsere web.
                             </p>
