--- a/RO/trinity.html
+++ b/RO/trinity.html
@@ -130,13 +130,13 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             GULP:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Am folosit Gulp pentru automatizarea procesului de dezvoltare și optimizarea site-ului.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             JavaScript și jQuery:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Am folosit JavaScript împreună cu biblioteca jQuery pentru crearea elementelor interactive,
                                 îmbunătățirea
                                 experienței utilizatorului și simplificarea DOM-ului.
@@ -144,7 +144,7 @@
                         </li>
                         <li class="projects__preview-item">
                             PHP:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Folosit pentru implementarea formularului de feedback pentru procesarea datelor trimise și
                                 trimiterea lor către
                                 server.
