--- a/RO/vr.html
+++ b/RO/vr.html
@@ -135,41 +135,41 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Structura paginii:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Pagina are o structură blocată, împărțită în diverse secțiuni pentru o mai bună organizare a
                                 conținutului.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Utilizarea graficii:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Pagina prezintă imagini, videoclipuri și alte elemente media legate de realitatea virtuală.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Tipografie:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Pentru o lectură confortabilă, sunt folosite fonturi prietenoase, cu dimensiuni și intervale
                                 bine alese.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Elemente interactive:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Pagina prezintă elemente interactive, cum ar fi butoane, meniuri derulante și elemente de
                                 control legate de realitatea virtuală.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Compatibilitate între browsere:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Proiectul a fost dezvoltat ținând cont de compatibilitatea între browsere pentru a asigura o
                                 afișare corectă în diverse browsere web.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Optimizare SEO:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Etichetele HTML semantice sunt utilizate pe pagină pentru a îmbunătăți indexarea paginii de
                                 către motoarele de căutare.
                             </p>
