--- a/RO/wave.html
+++ b/RO/wave.html
@@ -125,14 +125,14 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Design receptiv:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Site-ul este conceput pentru a fi receptiv, asigurând o funcționare fără probleme pe diferite dispozitive și dimensiuni
                                 de ecran.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             UI/UX modern:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ro">
                                 Site-ul are o interfață de utilizator modernă și curată, asigurând o experiență plăcută. Folosește o schemă de culori
                                 unitară și o tipografie pe tot site-ul.
                             </p>
