--- a/RU/blanchard.html
+++ b/RU/blanchard.html
@@ -124,26 +124,25 @@
                         </li>
                         <li class="projects__preview-item">
                             Внешний вид:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Это&nbsp;страница, посвященная&nbsp;аспектам&nbsp;макроэкономики или&nbsp;теории&nbsp;Оливера Бланшара&rsquo;.
-                                &nbsp;экономики.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Интерактивность:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 На странице есть элементы, с которыми пользователь может взаимодействовать: кнопки, формы, анимация и т. д.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Отзывчивость:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Сайт&nbsp;адаптивный и хорошо смотрится как на&nbsp;компьютерных, так и на&nbsp;мобильных устройствах.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Открытый источник:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Проект&nbsp;размещен на&nbsp;GitHub Pages, что может означать, что он&nbsp;является&nbsp;открытым исходным кодом и вы
                                 можете изучить его
                                 код на&nbsp;GitHub.
