--- a/RU/evklid.html
+++ b/RU/evklid.html
@@ -117,7 +117,7 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Открытый источник:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Проект&nbsp;размещен на&nbsp;GitHub Pages, что может означать, что он&nbsp;является&nbsp;открытым исходным кодом и вы
                                 можете
                                 изучить его
