--- a/RU/recidiviz.html
+++ b/RU/recidiviz.html
@@ -120,26 +120,26 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Технологии:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 HTML, CSS и JavaScript были использованы для&nbsp;создания&nbsp;интерактивной веб-страницы с визуализацией данных.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Внешний вид:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Применение современного дизайна и интерфейса для лучшего взаимодействия с данными.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Интерактивность:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 На странице есть элементы, с которыми пользователь может взаимодействовать, например&nbsp;кнопки для&nbsp;выбора данных
                                 и т. д.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Открытый источник:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Проект&nbsp;находится в&nbsp;открытом доступе, а его исходный код можно&nbsp;изучить на&nbsp;платформе GitHub
                                 платформе.
                             </p>
