--- a/RU/rivo.html
+++ b/RU/rivo.html
@@ -122,14 +122,14 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Отзывчивый дизайн:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Веб-сайт&nbsp;разработан&nbsp;как&nbsp;отзывчивый, что обеспечивает&nbsp;бесперебойную работу на различных устройствах и
                                 размеров экрана.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Современный UI/UX:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Сайт имеет&nbsp;современный и чистый пользовательский интерфейс, обеспечивающий&nbsp;приятное восприятие.
                                 Он&nbsp;использует
                                 &nbsp;единая цветовая
