--- a/RU/robin.html
+++ b/RU/robin.html
@@ -121,31 +121,31 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Макет страницы:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Страница имеет&nbsp;блочную структуру с разделением на различные секции для&nbsp;лучшей организации контента.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Типография:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Для удобства чтения используются удобные шрифты с хорошо подобранными размерами и интервалами.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Использование CSS:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Стили выполнены с использованием CSS, что позволяет&nbsp;создавать&nbsp;современный и привлекательный дизайн страниц.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Интерактивные элементы:
-                            <p class="projects__preview-descr">
-                                На странице есть интерактивные элементы, такие как&nbsp;кнопки и элементы управления для удобства пользователя&rsquo ;.
+                            <p class="projects__preview-descr projects__preview-descr--ru">
+                                На странице есть интерактивные элементы, такие как&nbsp;кнопки и элементы управления для удобства пользователя.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Кроссбраузерная совместимость:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Макет&nbsp;проекта&nbsp;кроссбраузерно совместим, чтобы&nbsp;обеспечить корректное отображение в&nbsp;различных
                                 веб-браузерах.
                             </p>
