--- a/RU/trinity.html
+++ b/RU/trinity.html
@@ -121,13 +121,13 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             GULP:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Я&rsquo;использовал Gulp для&nbsp;автоматизации процесса&nbsp;разработки и&nbsp;оптимизации&nbsp;сайта.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             JavaScript и jQuery:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Я&nbsp;использовал JavaScript вместе с библиотекой jQuery для&nbsp;создания интерактивных элементов, улучшения
                                 пользовательского опыта,
                                 и упрощения DOM.
@@ -135,7 +135,7 @@
                         </li>
                         <li class="projects__preview-item">
                             PHP:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Используется для&nbsp;реализации&nbsp;формы обратной связи для&nbsp;обработки отправленных данных и&nbsp;отправки
                                 их&nbsp;на&nbsp;сервер.
                             </p>
