--- a/RU/vr.html
+++ b/RU/vr.html
@@ -120,39 +120,39 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Макет страницы:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Страница имеет&nbsp;блочную структуру с разделением на различные секции для&nbsp;лучшей организации контента.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Использование графики:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 На странице представлены изображения, видеоролики и другие медиаэлементы, связанные с&nbsp;виртуальной реальностью.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Типография:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Для удобства чтения используются удобные шрифты с хорошо подобранными размерами и интервалами.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Интерактивные элементы:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 На странице представлены интерактивные элементы, такие как&nbsp;кнопки, выпадающие меню и элементы управления, связанные
                                 с виртуальной реальностью.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Кроссбраузерная совместимость:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Верстка&nbsp;проекта&nbsp;выполнена с учетом кроссбраузерной совместимости, чтобы&nbsp;обеспечить корректное
                                 отображение в&nbsp;различных веб-браузерах.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             SEO-оптимизация:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 Семантические HTML-теги применяются на&nbsp;странице для&nbsp;улучшения индексации страницы&nbsp;поисковыми системами.
                             </p>
                         </li>
