--- a/portfolio.html
+++ b/portfolio.html
@@ -112,14 +112,14 @@
                     <ul class="projects__preview-list">
                         <li class="projects__preview-item">
                             Responsive Design:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 The website is&nbsp;designed to&nbsp;be&nbsp;responsive, ensuring a&nbsp;seamless experience across various devices and
                                 screen sizes.
                             </p>
                         </li>
                         <li class="projects__preview-item">
                             Modern UI/UX:
-                            <p class="projects__preview-descr">
+                            <p class="projects__preview-descr projects__preview-descr--ru">
                                 The website features a&nbsp;modern and clean user interface, providing a&nbsp;pleasant user experience. It&nbsp;uses
                                 a&nbsp;consistent color
                                 scheme and typography throughout the site.
