--- a/RO/about.html
+++ b/RO/about.html
@@ -67,7 +67,7 @@
         <section class="about__page">
             <div class="container">
                 <div class="about__page-block--title">
-                    <h1 class="about__page-title" data-lang-key="about">Despre mine</h1>
+                    <h1 class="about__page-title about__page-title--ro" data-lang-key="about">Despre mine</h1>
                 </div>
                 <div class="about__page-block--content block">
                     <div class="about__page-block--img">
